testing/macro-tests/tests/ui/default_newtype_missing_constructor.rs
use icydb::design::prelude::*;

#[newtype(
    primitive = "Ulid",
    item(prim = "Ulid"),
    traits(add(Default))
)]
pub struct MissingNewtypeDefault;

fn main() {}
